Add copy from build to Autodesk Addins folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,17 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 configure_file(src/SilvanusPro.h.in src/SilvanusPro.h)
 
 IF(APPLE)
-    set(AUTODESK_FOLDER "$ENV{HOME}/Library/Application\ Support/Autodesk/Autodesk\ Fusion\ 360/API/CPP")
-    set(F360_INCLUDES "${AUTODESK_FOLDER}/include")
-    set(F360_LIBS "${AUTODESK_FOLDER}/lib")
+    set(AUTODESK_API_FOLDER "$ENV{HOME}/Library/Application\ Support/Autodesk/Autodesk\ Fusion\ 360/API")
     set(LOCAL_INCLUDES "/usr/local/include")
 ELSEIF(WIN32)
     set(AUTODESK_HASH d2d901e2ef5ae5c384b4ac001a48c4e37589dc43) # Pulled from the Autodesk folder name under your APPDATA folder
-    set(AUTODESK_FOLDER "$ENV{APPDATA}/Autodesk/Autodesk Fusion 360/API/CPP")
-    set(F360_INCLUDES "${AUTODESK_FOLDER}/include")
-    set(F360_LIBS "${AUTODESK_FOLDER}/lib")
+    set(AUTODESK_API_FOLDER "$ENV{APPDATA}/Autodesk/Autodesk Fusion 360/API")
 ENDIF(APPLE)
+
+set(AUTODESK_ADDINS_FOLDER "${AUTODESK_API_FOLDER}/Addins")
+set(AUTODESK_FOLDER "${AUTODESK_API_FOLDER}/CPP")
+set(F360_INCLUDES "${AUTODESK_FOLDER}/include")
+set(F360_LIBS "${AUTODESK_FOLDER}/lib")
 
 if (MSVC_VERSION GREATER_EQUAL "1900") # Make sure that the Visual Studio compiler is using C++17
     include(CheckCXXCompilerFlag)
@@ -99,4 +100,11 @@ if(CMAKE_GENERATOR STREQUAL Xcode)
     )
 endif()
 
-#file(COPY ${CMAKE_BINARY_DIR}/SilvanusPro.dylib DESTINATION ${CMAKE_SOURCE_DIR})
+IF(APPLE)
+    file(REMOVE ${AUTODESK_ADDINS_FOLDER}/SilvanusPro/resources)
+    file(REMOVE ${AUTODESK_ADDINS_FOLDER}/SilvanusPro/SilvanusPro.manifest)
+    file(REMOVE ${AUTODESK_ADDINS_FOLDER}/SilvanusPro/SilvanusPro.dylib)
+    file(COPY ${CMAKE_SOURCE_DIR}/resources DESTINATION ${AUTODESK_ADDINS_FOLDER}/SilvanusPro)
+    file(COPY ${CMAKE_SOURCE_DIR}/SilvanusPro.manifest DESTINATION ${AUTODESK_ADDINS_FOLDER}/SilvanusPro)
+    file(COPY ${CMAKE_BINARY_DIR}/SilvanusPro.dylib DESTINATION ${AUTODESK_ADDINS_FOLDER}/SilvanusPro)
+ENDIF()
