Convert dialog to use ECS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ if(APPLE)
     set(AUTODESK_API_FOLDER "$ENV{HOME}/Library/Application\ Support/Autodesk/Autodesk\ Fusion\ 360/API")
     set(SILVANUS_LIB "${PROJECT_NAME}.dylib")
     set(LOCAL_INCLUDES "/usr/local/include")
+    set(LOCAL_LIB "/usr/local/lib")
 elseif(WIN32)
     set(AUTODESK_HASH d2d901e2ef5ae5c384b4ac001a48c4e37589dc43) # Pulled from the Autodesk folder name under your APPDATA folder
     set(AUTODESK_API_FOLDER "$ENV{APPDATA}/Autodesk/Autodesk Fusion 360/API")
@@ -73,6 +74,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/common)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox)
+include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/dialog)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/entities)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/fusion)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/systems)
@@ -89,6 +91,7 @@ if(APPLE)
     find_library(ADSK_CORE core.dylib PATHS "${F360_LIBS}/")
     find_library(ADSK_FUSION fusion.dylib PATHS "${F360_LIBS}/")
     find_library(ADSK_CAM cam.dylib PATHS "${F360_LIBS}/")
+    find_library(BOOST_FILE libboost_filesystem.a PATHS "${LOCAL_LIB}")
 elseif(WIN32)
     find_package(EnTT CONFIG REQUIRED) # Assumes EnTT installed through vcpkg with Visual Studio
     target_link_libraries(${PROJECT_NAME} PRIVATE EnTT::EnTT)
@@ -98,6 +101,7 @@ elseif(WIN32)
 endif()
 
 target_link_libraries(${PROJECT_NAME} PUBLIC ${ADSK_CORE} ${ADSK_FUSION} ${ADSK_CAM})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${BOOST_FILE})
 
 if(CMAKE_GENERATOR STREQUAL Xcode)
     configure_file(
