Add automatic collision detection between panels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,16 @@ cmake_policy(SET CMP0048 NEW)
 cmake_minimum_required(VERSION 3.17)
 project (SilvanusPro VERSION 0.5.5.0)
 
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Debug)
+endif()
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+#set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2")
+
 set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum Fusion 360 supported version of MacOS/OSX.")
 set(CMAKE_OSX_SYSROOT "/Library/Developer/CommandLineTools/SDKs/MacOSX10.13.sdk")
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
@@ -75,6 +83,9 @@ include_directories(${CMAKE_SOURCE_DIR}/src/lib)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/common)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/dialog)
+include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/dialog/entities)
+include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/dialog/presentation)
+include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/dialog/systems)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/entities)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/fusion)
 include_directories(${CMAKE_SOURCE_DIR}/src/lib/generatebox/systems)
